laravel is working

--- a/roles/php/templates/laravel.env.j2
+++ b/roles/php/templates/laravel.env.j2
@@ -1,14 +1,14 @@
-APP_NAME=TravelList
+APP_NAME=testwork
 APP_ENV=development
 APP_KEY=APPLICATION_UNIQUE_KEY_DONT_COPY
 APP_DEBUG=true
-APP_URL=http://domain_or_IP
+APP_URL=http://{{nginx.domain}}
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=travellist
-DB_USERNAME=travellist_user
-DB_PASSWORD=password
+DB_DATABASE={{laravel_db}}
+DB_USERNAME={{laravel_user}}
+DB_PASSWORD={{laravel_password}}
